tests/fails/vecindex3.t
import "compiler/liszt"

mesh = LoadMesh("examples/mesh.lmesh")

local vk = liszt_kernel(v)
	var x = {1, 2, {2, 3}}
end
mesh.vertices:map(vk)
